# vgi-python

./: .gitignore  .pydoclint-baseline  .vale.ini  CLAUDE.md  DOCS_ACCEPTANCE_CRITERIA.md  DOCS_REVIEW_RUBRIC.md  DOCS_USABILITY_TEST.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  wrangler.jsonc
.beads/: issues.jsonl
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  integration.yml  release.yml
ci/: README.md  preprocess-require.awk  run-integration.sh
cloudflare/vgi-storage/: package-lock.json  package.json  wrangler.toml
docs/: aggregate-functions.md  argument-serialization.md  authentication.md  catalog-interface.md  cli.md  column-statistics.md  contributing-docs.md  design-duckdb-settings.md  filter-pushdown.md  generator-api.md  index.md  lifecycle.md  metadata.md  opentelemetry.md  polars-scalar-functions.md  proposal-catalog-data-versions.md  protocol.md  robots.txt  shared-storage.md
docs/api/: arguments.md  auth.md  catalogs.md  client.md  exceptions.md  filters.md  functions.md  http.md  index.md  metadata.md  observability.md  storage.md  transactor.md  worker.md
docs/concepts/: index.md
docs/how-to/: catalogs.md  function-patterns.md  http-auth.md  index.md  pushdown-and-statistics.md  state-storage.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
docs/tutorial/: index.md  scalar.md  table.md
examples/: calc_scalar_worker.py  calc_worker.py  filter_worker.py  greeting_scalar_worker.py  greeting_worker.py  row_count_worker.py  series_streaming_worker.py  sum_worker.py
scripts/: measure_startup.py  run_all_tests.sh
test-data/: generate.sh
tests/: __init__.py  _http_fixtures.py  conftest.py  test_access_log_audit.py  test_aggregate_function.py  test_argument_spec.py  test_auth.py  test_bind_exceptions.py  test_bind_request_at_clause.py  test_bound_storage_conformance.py  test_cache_control.py  test_catalog_auth_binding.py  test_copy_from_function.py  test_copy_to_function.py  test_docstrings.py  test_documentation_examples.py  test_example_function_arg_types.py  test_examples_workers.py  test_exception_handling.py  test_exceptions.py  test_filter_pushdown.py  test_filter_pushdown_extension.py  test_function_storage.py  test_function_storage_azure_sql.py  test_function_storage_cf_do.py  test_function_storage_cf_do_integration.py  test_function_storage_conformance.py  test_generated_cpp_constants.py  test_generated_cpp_protocol_version.py  test_generated_cpp_request_builders.py  test_generated_cpp_schemas.py  test_generated_cpp_secret.py  test_generated_go_schemas.py  test_generated_protocol_version.py  test_generated_schemas_cross_lang.py  test_generated_ts_client.py  test_generated_ts_schemas.py  test_http_demo_storage.py  test_http_s3_offload_input.py  test_http_s3_offload_output.py  (+31 more)
tests/catalog/: __init__.py  test_catalog_interface.py  test_client_catalog.py  test_column_statistics.py  test_declarative.py  test_example_worker_catalog.py  test_integration.py  test_required_field_filter_paths.py  test_required_filters.py  test_scan_branches.py  test_serialization.py  test_setting.py  test_storage.py  test_time_travel.py  test_writable_table.py
tests/ci/: __init__.py  conftest.py  test_catalog.py  test_catalog_ddl.py  test_fixtures.py  test_isolation.py  test_storage.py  test_transactions.py
tests/client/: __init__.py  test_broken_pipe.py  test_cli.py  test_cli_catalog_functions.py  test_worker_debug.py
tests/conformance/: __init__.py  _stub.py  conftest.py  test_accumulate.py  test_aggregate.py  test_attach.py  test_bearer_auth.py  test_const_param_enforcement.py  test_container.py  test_copy_from.py  test_copy_to.py  test_directory_parity.py  test_function_inventory.py  test_github.py  test_http_client.py  test_http_external_location.py  test_http_upload_url.py  test_macro.py  test_overload.py  test_protocol_inventory.py  test_protocol_version.py  test_resumable_scan.py  test_scalar.py  test_scalar_attach_id.py  test_scalar_attach_opaque_data.py  test_secret.py  test_settings.py  test_table.py  test_table_in_out.py  test_view.py  test_writable.py
tests/landing/: _checker.py  describe.expected.json
tests/scalar/: __init__.py  test_bernoulli_function.py  test_binary_packet_function.py  test_client.py  test_conditional_message_function.py  test_function.py  test_hash_seed_function.py  test_multiply_by_setting_function.py  test_multiply_function.py  test_random_bytes_function.py  test_return_secret_value_function.py
tests/table/: __init__.py  test_function.py
tests/table_in_out/: __init__.py  test_blended_metadata.py  test_buffer_input_function.py  test_client.py  test_echo_function.py  test_function.py  test_repeat_inputs_function.py  test_simple_function.py  test_streaming_decorator.py  test_sum_all_columns_function.py
tests/transactor/: __init__.py  test_transactor.py
vgi/: __init__.py  _duckdb.py  _storage_profile.py  aggregate_function.py  argument_spec.py  arguments.py  attach_header.py  auth.py  cache_control.py  client.py  copy_from_function.py  copy_to_function.py  exceptions.py  function.py  function_storage.py  function_storage_azure_sql.py  function_storage_cf_do.py  invocation.py  ipc_utils.py  log.py  logging.py  logging_config.py  meta_worker.py  metadata.py  otel.py  output_complete.py  protocol.py  protocol_types.py  scalar_function.py  scalar_function_polars.py  schema_utils.py  secret_protocol.py  secret_service.py  serve.py  table_buffering_function.py  table_filter_pushdown.py  table_function.py  table_in_out_function.py  table_in_out_function_patterns.py  testing.py  (+3 more)
vgi/_test_fixtures/: __init__.py  attach_options.py  bad_enum.py  bad_protocol.py  cancellable.py  catalog.py  companion.py  copy_from.py  copy_to.py  http_server.py  nest_tensor.py  orchard_catalog.py  scalar.py  simple_writable.py  table.py  table_in_out.py  table_in_out_same_name.py  twin_catalogs.py  versioned.py  versioned_tables.py  worker.py
vgi/catalog/: __init__.py  _descriptor_spec.py  attach_option.py  catalog_interface.py  descriptors.py  duckdb_statistics.py  secret_type.py  setting.py  storage.py
(+144 files in other folders)
