[project]
name = "vgi"
version = "0.8.0"
description = "Vector Gateway Interface - Connect DuckDB to external programs via Apache Arrow"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Rusty Conover", email = "rusty@query.farm" }]
maintainers = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
classifiers = [
    "License :: Other/Proprietary License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "click",
    "pyarrow",
    "typer>=0.9",
    "platformdirs",
    "vgi-rpc>=0.18.1",
    "duckdb>=1.5.3",
    "httpx>=0.24",
]

[project.optional-dependencies]
http = ["vgi-rpc[http]"]
oauth = ["vgi-rpc[oauth]"]
otel = ["vgi-rpc[otel]"]
sentry = ["vgi-rpc[sentry]"]
azure = [
    "pymssql>=2.3.0",
    "azure-identity>=1.16.0",
]
test-fixtures = ["numpy>=2.4.1"]
transactor = ["sqlglot"]
# Convenience extra: pulls the companion `vgi-fixtures` distribution, which
# restores vgi/_test_fixtures + the vgi-fixture-* worker commands for users who
# want the example/test workers from a traditional install.
fixtures = ["vgi-fixtures"]
test-fixtures-writable = [
    "vgi[test-fixtures]",
    "vgi[transactor]",
]
dev = [
    "mypy",
    "pyarrow-stubs",
    "pytest",
    "pytest-cov",
    "pytest-examples",
    "pytest-ruff",
    "pytest-xdist",
    "ruff",
    "vgi[test-fixtures,test-fixtures-writable,http,oauth,otel,sentry,azure]",
    "vgi-rpc[conformance,external,http,oauth,otel,sentry]",
]
[project.scripts]
vgi-serve = "vgi.serve:main"
vgi-secret-serve = "vgi.secret_service:main"
vgi-client = "vgi.client.cli:main"
vgi-transactor = "vgi.transactor.server:main"
# The vgi-fixture-* worker commands are intentionally NOT registered here so
# they don't ship in the public wheel / pollute end-user PATH. They are provided
# by the dev-only sidecar distribution in packages/vgi-fixtures (see its
# pyproject.toml), which is installed via the uv workspace for tests.

[project.urls]
Homepage = "https://query.farm"
Repository = "https://github.com/Query-farm/vgi-python"
Documentation = "https://github.com/Query-farm/vgi-python/tree/main/docs"
Issues = "https://github.com/Query-farm/vgi-python/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# vgi/_test_fixtures is shipped by the separate `vgi-fixtures` companion wheel
# (see packages/vgi-fixtures), not the public `vgi` wheel. Install it on demand
# via `pip install vgi[fixtures]` or `pip install vgi-fixtures`.
exclude = ["vgi/codegen", "vgi/_test_fixtures"]

[tool.hatch.build.targets.sdist]
exclude = []

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["duckdb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]
ignore = [
    "D203", # incompatible with D211 (no-blank-line-before-class)
    "D213", # incompatible with D212 (multi-line-summary-first-line)
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "typer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# These files have type: ignore comments for ty that mypy doesn't need
module = ["vgi._test_fixtures.scalar.null_handling", "vgi.table_function"]
warn_unused_ignores = false

[tool.ty.environment]
python-version = "3.13"

[tool.pytest.ini_options]
addopts = "--ruff"
testpaths = ["tests"]

[tool.coverage.run]
# Enable subprocess coverage - automatically patches subprocess.Popen
# to inject coverage measurement into spawned worker processes
patch = ["subprocess"]
# Each subprocess writes to its own data file (.coverage.<hostname>.<pid>)
parallel = true
# Handle SIGTERM gracefully (writes coverage data before exit)
sigterm = true
# Measure branch coverage
branch = true
# What to measure
source = ["vgi"]
# Omit test fixtures and tests from coverage
omit = ["vgi/_test_fixtures/*", "tests/*"]

[tool.coverage.report]
# Fail if coverage drops below this threshold
fail_under = 80
# Show missing lines in the report
show_missing = true
# Exclude common patterns from coverage
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",                  # Ellipsis in stub files
]

[tool.coverage.html]
directory = "htmlcov"

[tool.uv.workspace]
members = ["packages/vgi-fixtures"]

[tool.uv.sources]
# duckdb = { path = "/Users/rusty/Development/duckdb-python/dist/duckdb-1.6.0.dev15-cp314-cp314-macosx_15_0_arm64.whl" }
vgi-fixtures = { workspace = true }

[dependency-groups]
dev = ["lxml>=6.0.2", "pytest-timeout>=2.4.0", "ty>=0.0.8", "vgi-fixtures"]
